fabric/testdata/out/ing_spp-product-identity-post-internal-product-identities-gtin-ranges-statistics-all-spp-product-identity-master-573.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\", \"spp-product-identity.admin\") -\u003e
      flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\", \"scope\",
      \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026 Path(\"/internal-product-identities/gtin-ranges/statistics\")
      \u0026\u0026 Method(\"POST\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"dd881b95-f979-11e8-968d-026f86c7c91a","deployment-id":"d-axm9b9h4emne2icuau68ss53s","pipeline-id":"l-gqkrnfckkaunnp4hd1ria2jz5"},"name":"spp-product-identity-post-internal-product-identities-gtin-ranges-statistics-all-spp-product-identity-master-573","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity-master-573.smart-product-platform-test.zalan.do","http":{"p [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-product-identity.admin") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/internal-product-identities/gtin-ranges/statistics")
      && Method("POST") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-11-01T13:51:16Z"
  generation: 1
  labels:
    controller-uid: dd881b95-f979-11e8-968d-026f86c7c91a
    deployment-id: d-axm9b9h4emne2icuau68ss53s
    pipeline-id: l-gqkrnfckkaunnp4hd1ria2jz5
  name: spp-product-identity-post-internal-product-identities-gtin-ranges-statistics-all-spp-product-identity-master-573
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity
    uid: dd881b95-f979-11e8-968d-026f86c7c91a
  resourceVersion: "1383841560"
  uid: 4601c2a9-3b27-4d86-987f-35f716eee9fa
spec:
  rules:
  - host: spp-product-identity-master-573.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
